Construção de Compiladores/Exemplos Códigos Roberto/8 - Contrução de compiladores/8 - Contrução de compiladores/Tradutor parte 2/Tradutor parte 2/bin/sintatica.output
Rules useless in parser due to conflicts

   64 exp: TK_ID


State 5 conflicts: 1 shift/reduce
State 8 conflicts: 2 shift/reduce, 4 reduce/reduce
State 12 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce
State 42 conflicts: 54 shift/reduce, 142 reduce/reduce
State 51 conflicts: 1 shift/reduce
State 52 conflicts: 45 shift/reduce
State 55 conflicts: 45 shift/reduce
State 56 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 64 conflicts: 46 shift/reduce, 81 reduce/reduce
State 102 conflicts: 1 shift/reduce, 80 reduce/reduce
State 103 conflicts: 1 shift/reduce
State 104 conflicts: 55 shift/reduce, 71 reduce/reduce
State 105 conflicts: 1 shift/reduce
State 107 conflicts: 16 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 1 shift/reduce, 80 reduce/reduce
State 117 conflicts: 1 shift/reduce, 85 reduce/reduce
State 125 conflicts: 1 shift/reduce
State 126 conflicts: 1 shift/reduce
State 128 conflicts: 54 shift/reduce, 142 reduce/reduce
State 131 conflicts: 17 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 137 conflicts: 1 shift/reduce
State 138 conflicts: 1 shift/reduce
State 139 conflicts: 1 shift/reduce
State 140 conflicts: 1 shift/reduce
State 141 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 149 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 153 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 156 conflicts: 45 shift/reduce
State 157 conflicts: 2 shift/reduce
State 162 conflicts: 45 shift/reduce
State 163 conflicts: 45 shift/reduce
State 164 conflicts: 45 shift/reduce
State 165 conflicts: 45 shift/reduce
State 166 conflicts: 45 shift/reduce
State 167 conflicts: 45 shift/reduce
State 168 conflicts: 45 shift/reduce
State 169 conflicts: 45 shift/reduce
State 170 conflicts: 45 shift/reduce
State 171 conflicts: 45 shift/reduce
State 172 conflicts: 45 shift/reduce
State 173 conflicts: 45 shift/reduce
State 174 conflicts: 45 shift/reduce
State 175 conflicts: 45 shift/reduce
State 176 conflicts: 45 shift/reduce
State 177 conflicts: 45 shift/reduce
State 185 conflicts: 1 shift/reduce
State 187 conflicts: 1 shift/reduce
State 194 conflicts: 55 shift/reduce, 71 reduce/reduce
State 222 conflicts: 16 reduce/reduce
State 225 conflicts: 1 shift/reduce, 1 reduce/reduce
State 233 conflicts: 16 reduce/reduce
State 234 conflicts: 16 reduce/reduce
State 235 conflicts: 16 reduce/reduce
State 236 conflicts: 16 reduce/reduce
State 237 conflicts: 16 reduce/reduce
State 247 conflicts: 54 shift/reduce, 144 reduce/reduce
State 251 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce
State 253 conflicts: 1 shift/reduce
State 254 conflicts: 1 shift/reduce
State 255 conflicts: 54 shift/reduce, 142 reduce/reduce
State 256 conflicts: 1 shift/reduce
State 267 conflicts: 1 shift/reduce
State 271 conflicts: 1 shift/reduce
State 274 conflicts: 1 shift/reduce
State 285 conflicts: 54 shift/reduce, 140 reduce/reduce
State 286 conflicts: 1 shift/reduce
State 287 conflicts: 56 shift/reduce, 72 reduce/reduce
State 291 conflicts: 54 shift/reduce, 142 reduce/reduce
State 297 conflicts: 55 shift/reduce, 71 reduce/reduce
State 305 conflicts: 1 shift/reduce
State 306 conflicts: 54 shift/reduce, 70 reduce/reduce
State 307 conflicts: 54 shift/reduce, 142 reduce/reduce
State 308 conflicts: 1 shift/reduce
State 309 conflicts: 1 shift/reduce
State 310 conflicts: 54 shift/reduce, 144 reduce/reduce
State 311 conflicts: 54 shift/reduce, 72 reduce/reduce
State 312 conflicts: 1 shift/reduce
State 318 conflicts: 1 shift/reduce
State 320 conflicts: 1 shift/reduce
State 321 conflicts: 55 shift/reduce, 71 reduce/reduce
State 322 conflicts: 54 shift/reduce, 142 reduce/reduce
State 324 conflicts: 56 shift/reduce, 72 reduce/reduce
State 332 conflicts: 55 shift/reduce, 71 reduce/reduce
State 343 conflicts: 1 shift/reduce
State 344 conflicts: 1 shift/reduce
State 345 conflicts: 54 shift/reduce, 142 reduce/reduce
State 346 conflicts: 54 shift/reduce, 142 reduce/reduce
State 347 conflicts: 55 shift/reduce, 71 reduce/reduce
State 348 conflicts: 55 shift/reduce, 71 reduce/reduce
State 349 conflicts: 1 shift/reduce
State 350 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    2 endline: ε
    3        | TK_NL endline

    4 bloco_var: ε
    5          | TK_VAR endline lstids
    6          | TK_VAR lstids endline

    7 lstids: ε
    8       | TK_ID TK_OP_VAR tipo endline lstids
    9       | TK_ID TK_VIRGULA lstids

   10 tipo: TK_TIPO_INTEIRO
   11     | TK_TIPO_LITERAL
   12     | TK_TIPO_CARACTER
   13     | TK_TIPO_LOGICO
   14     | TK_TIPO_REAL
   15     | TK_TIPO_NUMERICO

   16 bloco_subalgo: ε
   17              | subalgoritmo bloco_subalgo

   18 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline
   19             | TK_FUNCAO TK_ID TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

   20 auxfuncao: TK_OP_VAR tipo TK_NL
   21          | tipo TK_NL

   22 auxfuncao2: comandos retornofuncao
   23           | retornofuncao

   24 arglist: ε
   25        | TK_ID TK_OP_VAR tipo arglist
   26        | TK_PONTO_VIRGULA arglist
   27        | TK_VAR arglist

   28 retornofuncao: TK_RETORNE endline
   29              | TK_RETORNE exp endline

   30 comandos: ε
   31         | comando endline
   32         | comandos comando

   33 comando: exp
   34        | TK_SE exp TK_ENTAO endline comandos TK_FIMSE endline
   35        | TK_SE exp TK_ENTAO endline comandos TK_SENAO endline comandos TK_FIMSE
   36        | TK_ENQUANTO exp TK_FACA TK_NL comandos TK_FIMENQUANTO endline
   37        | TK_REPITA TK_NL comandos TK_ATE exp TK_NL
   38        | TK_PARA TK_ID TK_DE TK_NUM_INT TK_ATE TK_NUM_INT passovariacao TK_FACA TK_NL endline comandos TK_FIMPARA endline
   39        | TK_PARA TK_ID TK_DE TK_NUM_INT TK_ATE TK_ID passovariacao TK_FACA TK_NL endline comandos TK_FIMPARA endline
   40        | TK_ESCOLHA TK_ID TK_NL caselist TK_FIMESCOLHA
   41        | comandoIO endline
   42        | predefinedFuncions endline
   43        | retornofuncao endline
   44        | TK_ID TK_OP TK_CP
   45        | TK_ID TK_OP constantlist TK_CP

   46 passovariacao: ε
   47              | TK_PASSO TK_NUM_INT
   48              | TK_PASSO TK_OP_SUB TK_NUM_INT

   49 caselist: TK_CASO constantlist TK_NL comandos caselist
   50         | TK_OUTROCASO TK_NL comandos

   51 constantlist: constant
   52             | constant TK_VIRGULA constantlist

   53 constant: TK_NUM
   54         | TK_NUM_INT
   55         | TK_ID
   56         | VLR_STRING
   57         | VLR_CHARACTER
   58         | TK_CONST_FALSO
   59         | TK_CONST_VERDADEIRO

   60 explist: exp
   61        | exp TK_VIRGULA explist

   62 exp: TK_ID TK_OP_ATRIB factor
   63    | factor
   64    | TK_ID
   65    | exp TK_OP_ADD exp
   66    | exp TK_OP_SUB exp
   67    | exp TK_OP_LT exp
   68    | exp TK_OP_LTEQ exp
   69    | exp TK_OP_GT exp
   70    | exp TK_OP_GTEQ exp
   71    | exp TK_OP_EQ exp
   72    | exp TK_OP_NOTEQ exp
   73    | exp TK_OP_E exp
   74    | exp TK_OP_OU exp
   75    | exp TK_OP_XOU exp
   76    | TK_OP_NAO exp

   77 factor: term
   78       | exp TK_OP_MUL factor
   79       | exp TK_OP_DIV factor
   80       | exp TK_OP_MOD factor
   81       | exp TK_OP_DIV_INT factor
   82       | exp TK_OP_EXP factor

   83 term: constant
   84     | TK_OP exp TK_CP
   85     | TK_OP_SUB exp
   86     | TK_ID TK_OP explist TK_CP
   87     | predefinedFuncions

   88 comandoIO: ε
   89          | TK_ESCREVA TK_OP explist TK_CP endline
   90          | TK_ESCREVAL TK_OP explist TK_CP endline
   91          | TK_LEIA TK_OP TK_ID TK_CP endline

   92 predefinedFuncions: ε
   93                   | TK_ABS TK_OP exp TK_CP
   94                   | TK_ARCCOS TK_OP exp TK_CP
   95                   | TK_ARCSEN TK_OP exp TK_CP
   96                   | TK_ARCTAN TK_OP exp TK_CP
   97                   | TK_ASC TK_OP exp TK_CP
   98                   | TK_COMPR TK_OP exp TK_CP
   99                   | TK_COPIA TK_OP exp TK_VIRGULA exp TK_VIRGULA exp TK_CP
  100                   | TK_COS TK_OP exp TK_CP
  101                   | TK_COTAN TK_OP exp TK_CP
  102                   | TK_EXP TK_OP exp TK_VIRGULA exp TK_CP
  103                   | TK_GRAUPRAD TK_OP exp TK_CP
  104                   | TK_FUN_INT TK_OP exp TK_CP
  105                   | TK_INTERROMPA
  106                   | TK_LOG TK_OP exp TK_CP
  107                   | TK_LOGN TK_OP exp TK_CP
  108                   | TK_MAIUSC TK_OP exp TK_CP
  109                   | TK_MINUSC TK_OP exp TK_CP
  110                   | TK_NUMPCARAC TK_OP exp TK_CP
  111                   | TK_PI
  112                   | TK_POS TK_OP exp TK_VIRGULA exp TK_CP
  113                   | TK_QUAD TK_OP exp TK_CP
  114                   | TK_RADPGRAU TK_OP exp TK_CP
  115                   | TK_RAIZQ TK_OP exp TK_CP
  116                   | TK_RAND
  117                   | TK_RANDI TK_OP exp TK_CP
  118                   | TK_SEN TK_OP exp TK_CP
  119                   | TK_TAN TK_OP exp TK_CP
  120                   | TK_ALEATORIO
  121                   | TK_CRONOMETRO
  122                   | TK_DEBUG
  123                   | TK_ECO
  124                   | TK_PAUSA
  125                   | TK_TIMER
  126                   | TK_ARQUIVO
  127                   | TK_MENSAGEM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    VLR_STRING (258) 1 56
    VLR_CHARACTER (259) 57
    TK_ALGORITMO (260) 1
    TK_INICIO (261) 1 18 19
    TK_FIMALGORITMO (262) 1
    TK_VAR (263) 5 6 27
    TK_TIPO_INTEIRO (264) 10
    TK_TIPO_LITERAL (265) 11
    TK_TIPO_CARACTER (266) 12
    TK_TIPO_LOGICO (267) 13
    TK_TIPO_REAL (268) 14
    TK_TIPO_NUMERICO (269) 15
    TK_OP_ATRIB (270) 62
    TK_OP (271) 18 19 44 45 84 86 89 90 91 93 94 95 96 97 98 99 100 101 102 103 104 106 107 108 109 110 112 113 114 115 117 118 119
    TK_CP (272) 18 19 44 45 84 86 89 90 91 93 94 95 96 97 98 99 100 101 102 103 104 106 107 108 109 110 112 113 114 115 117 118 119
    TK_OP_VAR (273) 8 20 25
    TK_VIRGULA (274) 9 52 61 99 102 112
    TK_PONTO_VIRGULA (275) 26
    TK_OP_E (276) 73
    TK_OP_NAO (277) 76
    TK_OP_OU (278) 74
    TK_OP_XOU (279) 75
    TK_CONST_FALSO (280) 58
    TK_CONST_VERDADEIRO (281) 59
    TK_OP_ADD (282) 65
    TK_OP_SUB (283) 48 66 85
    TK_UMINUS (284)
    TK_OP_MUL (285) 78
    TK_OP_DIV (286) 79
    TK_OP_DIV_INT (287) 81
    TK_OP_MOD (288) 80
    TK_OP_EXP (289) 82
    TK_OP_GT (290) 69
    TK_OP_GTEQ (291) 70
    TK_OP_LT (292) 67
    TK_OP_LTEQ (293) 68
    TK_OP_EQ (294) 71
    TK_OP_NOTEQ (295) 72
    TK_SE (296) 34 35
    TK_ENTAO (297) 34 35
    TK_SENAO (298) 35
    TK_FIMSE (299) 34 35
    TK_ESCOLHA (300) 40
    TK_CASO (301) 49
    TK_OUTROCASO (302) 50
    TK_FIMESCOLHA (303) 40
    TK_LEIA (304) 91
    TK_ESCREVA (305) 89
    TK_ESCREVAL (306) 90
    TK_ENQUANTO (307) 36
    TK_FIMENQUANTO (308) 36
    TK_REPITA (309) 37
    TK_PARA (310) 38 39
    TK_DE (311) 38 39
    TK_ATE (312) 37 38 39
    TK_PASSO (313) 47 48
    TK_FACA (314) 36 38 39
    TK_FIMPARA (315) 38 39
    TK_FUNCAO (316) 19
    TK_FIMFUNCAO (317) 19
    TK_RETORNE (318) 28 29
    TK_INTERROMPA (319) 105
    TK_PROCEDIMENTO (320) 18
    TK_FIMPROCEDIMENTO (321) 18
    TK_SEN (322) 118
    TK_COS (323) 100
    TK_TAN (324) 119
    TK_ARCSEN (325) 95
    TK_ARCCOS (326) 94
    TK_ARCTAN (327) 96
    TK_COTAN (328) 101
    TK_GRAUPRAD (329) 103
    TK_RADPGRAU (330) 114
    TK_EXP (331) 102
    TK_RAIZQ (332) 115
    TK_LOG (333) 106
    TK_LOGN (334) 107
    TK_POS (335) 112
    TK_ASC (336) 97
    TK_COMPR (337) 98
    TK_COPIA (338) 99
    TK_MAIUSC (339) 108
    TK_MINUSC (340) 109
    TK_NUMPCARAC (341) 110
    TK_ALEATORIO (342) 120
    TK_RAND (343) 116
    TK_RANDI (344) 117
    TK_ABS (345) 93
    TK_PI (346) 111
    TK_QUAD (347) 113
    TK_FUN_INT (348) 104
    TK_CRONOMETRO (349) 121
    TK_DEBUG (350) 122
    TK_ECO (351) 123
    TK_PAUSA (352) 124
    TK_TIMER (353) 125
    TK_ARQUIVO (354) 126
    TK_MENSAGEM (355) 127
    TK_NL (356) 1 3 18 19 20 21 36 37 38 39 40 49 50
    TK_NUM (357) 53
    TK_NUM_INT (358) 38 39 47 48 54
    TK_ID (359) 8 9 18 19 25 38 39 40 44 45 55 62 64 86 91


Nonterminals, with rules where they appear

    $accept (105)
        on left: 0
    programa (106)
        on left: 1
        on right: 0
    endline (107)
        on left: 2 3
        on right: 1 3 5 6 8 18 19 28 29 31 34 35 36 38 39 41 42 43 89 90 91
    bloco_var (108)
        on left: 4 5 6
        on right: 1 18 19
    lstids (109)
        on left: 7 8 9
        on right: 5 6 8 9
    tipo (110)
        on left: 10 11 12 13 14 15
        on right: 8 20 21 25
    bloco_subalgo (111)
        on left: 16 17
        on right: 1 17
    subalgoritmo (112)
        on left: 18 19
        on right: 17
    auxfuncao (113)
        on left: 20 21
        on right: 19
    auxfuncao2 (114)
        on left: 22 23
        on right: 19
    arglist (115)
        on left: 24 25 26 27
        on right: 18 19 25 26 27
    retornofuncao (116)
        on left: 28 29
        on right: 22 23 43
    comandos (117)
        on left: 30 31 32
        on right: 1 18 22 32 34 35 36 37 38 39 49 50
    comando (118)
        on left: 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 31 32
    passovariacao (119)
        on left: 46 47 48
        on right: 38 39
    caselist (120)
        on left: 49 50
        on right: 40 49
    constantlist (121)
        on left: 51 52
        on right: 45 49 52
    constant (122)
        on left: 53 54 55 56 57 58 59
        on right: 51 52 83
    explist (123)
        on left: 60 61
        on right: 61 86 89 90
    exp (124)
        on left: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
        on right: 29 33 34 35 36 37 60 61 65 66 67 68 69 70 71 72 73 74 75 76 78 79 80 81 82 84 85 93 94 95 96 97 98 99 100 101 102 103 104 106 107 108 109 110 112 113 114 115 117 118 119
    factor (125)
        on left: 77 78 79 80 81 82
        on right: 62 63 78 79 80 81 82
    term (126)
        on left: 83 84 85 86 87
        on right: 77
    comandoIO (127)
        on left: 88 89 90 91
        on right: 41
    predefinedFuncions (128)
        on left: 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 126 127
        on right: 42 87


State 0

    0 $accept: • programa $end

    TK_ALGORITMO  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: TK_ALGORITMO • VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    VLR_STRING  shift, and go to state 3


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 4


State 3

    1 programa: TK_ALGORITMO VLR_STRING • endline bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 5

    $default  reduce using rule 2 (endline)

    endline  go to state 6


State 4

    0 $accept: programa $end •

    $default  accept


State 5

    3 endline: TK_NL • endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 7


State 6

    1 programa: TK_ALGORITMO VLR_STRING endline • bloco_var bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_VAR  shift, and go to state 8

    $default  reduce using rule 4 (bloco_var)

    bloco_var  go to state 9


State 7

    3 endline: TK_NL endline •

    $default  reduce using rule 3 (endline)


State 8

    5 bloco_var: TK_VAR • endline lstids
    6          | TK_VAR • lstids endline

    TK_NL  shift, and go to state 5
    TK_ID  shift, and go to state 10

    TK_INICIO        reduce using rule 2 (endline)
    TK_INICIO        [reduce using rule 7 (lstids)]
    TK_FUNCAO        reduce using rule 2 (endline)
    TK_FUNCAO        [reduce using rule 7 (lstids)]
    TK_PROCEDIMENTO  reduce using rule 2 (endline)
    TK_PROCEDIMENTO  [reduce using rule 7 (lstids)]
    TK_NL            [reduce using rule 2 (endline)]
    TK_NL            [reduce using rule 7 (lstids)]
    TK_ID            [reduce using rule 2 (endline)]
    $default         reduce using rule 2 (endline)

    endline  go to state 11
    lstids   go to state 12


State 9

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var • bloco_subalgo TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_FUNCAO        shift, and go to state 13
    TK_PROCEDIMENTO  shift, and go to state 14

    $default  reduce using rule 16 (bloco_subalgo)

    bloco_subalgo  go to state 15
    subalgoritmo   go to state 16


State 10

    8 lstids: TK_ID • TK_OP_VAR tipo endline lstids
    9       | TK_ID • TK_VIRGULA lstids

    TK_OP_VAR   shift, and go to state 17
    TK_VIRGULA  shift, and go to state 18


State 11

    5 bloco_var: TK_VAR endline • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 19


State 12

    6 bloco_var: TK_VAR lstids • endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 20


State 13

   19 subalgoritmo: TK_FUNCAO • TK_ID TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

    TK_ID  shift, and go to state 21


State 14

   18 subalgoritmo: TK_PROCEDIMENTO • TK_ID TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_ID  shift, and go to state 22


State 15

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo • TK_INICIO TK_NL endline comandos TK_FIMALGORITMO endline

    TK_INICIO  shift, and go to state 23


State 16

   17 bloco_subalgo: subalgoritmo • bloco_subalgo

    TK_FUNCAO        shift, and go to state 13
    TK_PROCEDIMENTO  shift, and go to state 14

    $default  reduce using rule 16 (bloco_subalgo)

    bloco_subalgo  go to state 24
    subalgoritmo   go to state 16


State 17

    8 lstids: TK_ID TK_OP_VAR • tipo endline lstids

    TK_TIPO_INTEIRO   shift, and go to state 25
    TK_TIPO_LITERAL   shift, and go to state 26
    TK_TIPO_CARACTER  shift, and go to state 27
    TK_TIPO_LOGICO    shift, and go to state 28
    TK_TIPO_REAL      shift, and go to state 29
    TK_TIPO_NUMERICO  shift, and go to state 30

    tipo  go to state 31


State 18

    9 lstids: TK_ID TK_VIRGULA • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 32


State 19

    5 bloco_var: TK_VAR endline lstids •

    $default  reduce using rule 5 (bloco_var)


State 20

    6 bloco_var: TK_VAR lstids endline •

    $default  reduce using rule 6 (bloco_var)


State 21

   19 subalgoritmo: TK_FUNCAO TK_ID • TK_OP arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

    TK_OP  shift, and go to state 33


State 22

   18 subalgoritmo: TK_PROCEDIMENTO TK_ID • TK_OP arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_OP  shift, and go to state 34


State 23

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO • TK_NL endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 35


State 24

   17 bloco_subalgo: subalgoritmo bloco_subalgo •

    $default  reduce using rule 17 (bloco_subalgo)


State 25

   10 tipo: TK_TIPO_INTEIRO •

    $default  reduce using rule 10 (tipo)


State 26

   11 tipo: TK_TIPO_LITERAL •

    $default  reduce using rule 11 (tipo)


State 27

   12 tipo: TK_TIPO_CARACTER •

    $default  reduce using rule 12 (tipo)


State 28

   13 tipo: TK_TIPO_LOGICO •

    $default  reduce using rule 13 (tipo)


State 29

   14 tipo: TK_TIPO_REAL •

    $default  reduce using rule 14 (tipo)


State 30

   15 tipo: TK_TIPO_NUMERICO •

    $default  reduce using rule 15 (tipo)


State 31

    8 lstids: TK_ID TK_OP_VAR tipo • endline lstids

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 36


State 32

    9 lstids: TK_ID TK_VIRGULA lstids •

    $default  reduce using rule 9 (lstids)


State 33

   19 subalgoritmo: TK_FUNCAO TK_ID TK_OP • arglist TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

    TK_VAR            shift, and go to state 37
    TK_PONTO_VIRGULA  shift, and go to state 38
    TK_ID             shift, and go to state 39

    $default  reduce using rule 24 (arglist)

    arglist  go to state 40


State 34

   18 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP • arglist TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_VAR            shift, and go to state 37
    TK_PONTO_VIRGULA  shift, and go to state 38
    TK_ID             shift, and go to state 39

    $default  reduce using rule 24 (arglist)

    arglist  go to state 41


State 35

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL • endline comandos TK_FIMALGORITMO endline

    TK_NL  shift, and go to state 5

    TK_NL     [reduce using rule 2 (endline)]
    $default  reduce using rule 2 (endline)

    endline  go to state 42


State 36

    8 lstids: TK_ID TK_OP_VAR tipo endline • lstids

    TK_ID  shift, and go to state 10

    $default  reduce using rule 7 (lstids)

    lstids  go to state 43


State 37

   27 arglist: TK_VAR • arglist

    TK_VAR            shift, and go to state 37
    TK_PONTO_VIRGULA  shift, and go to state 38
    TK_ID             shift, and go to state 39

    $default  reduce using rule 24 (arglist)

    arglist  go to state 44


State 38

   26 arglist: TK_PONTO_VIRGULA • arglist

    TK_VAR            shift, and go to state 37
    TK_PONTO_VIRGULA  shift, and go to state 38
    TK_ID             shift, and go to state 39

    $default  reduce using rule 24 (arglist)

    arglist  go to state 45


State 39

   25 arglist: TK_ID • TK_OP_VAR tipo arglist

    TK_OP_VAR  shift, and go to state 46


State 40

   19 subalgoritmo: TK_FUNCAO TK_ID TK_OP arglist • TK_CP auxfuncao bloco_var TK_INICIO TK_NL auxfuncao2 TK_FIMFUNCAO TK_NL endline

    TK_CP  shift, and go to state 47


State 41

   18 subalgoritmo: TK_PROCEDIMENTO TK_ID TK_OP arglist • TK_CP TK_NL bloco_var endline TK_INICIO endline comandos TK_FIMPROCEDIMENTO endline

    TK_CP  shift, and go to state 48


State 42

    1 programa: TK_ALGORITMO VLR_STRING endline bloco_var bloco_subalgo TK_INICIO TK_NL endline • comandos TK_FIMALGORITMO endline

    VLR_STRING           shift, and go to state 49
    VLR_CHARACTER        shift, and go to state 50
    TK_OP                shift, and go to state 51
    TK_OP_NAO            shift, and go to state 52
    TK_CONST_FALSO       shift, and go to state 53
    TK_CONST_VERDADEIRO  shift, and go to state 54
    TK_OP_SUB            shift, and go to state 55
    TK_SE                shift, and go to state 56
    TK_ESCOLHA           shift, and go to state 57
    TK_LEIA              shift, and go to state 58
    TK_ESCREVA           shift, and go to state 59
    TK_ESCREVAL          shift, and go to state 60
    TK_ENQUANTO          shift, and go to state 61
    TK_REPITA            shift, and go to state 62
    TK_PARA              shift, and go to state 63
    TK_RETORNE           shift, and go to state 64
    TK_INTERROMPA        shift, and go to state 65
    TK_SEN               shift, and go to state 66
    TK_COS               shift, and go to state 67
    TK_TAN               shift, and go to state 68
    TK_ARCSEN            shift, and go to state 69
    TK_ARCCOS            shift, and go to state 70
    TK_ARCTAN            shift, and go to state 71
    TK_COTAN             shift, and go to state 72
    TK_GRAUPRAD          shift, and go to state 73
    TK_RADPGRAU          shift, and go to state 74
    TK_EXP               shift, and go to state 75
    TK_RAIZQ             shift, and go to state 76
    TK_LOG               shift, and go to state 77
    TK_LOGN              shift, and go to state 78
    TK_POS               shift, and go to state 79
    TK_ASC               shift, and go to state 80
    TK_COMPR             shift, and go to state 81
    TK_COPIA             shift, and go to state 82
    TK_MAIUSC            shift, and go to state 83
    TK_MINUSC            shift, and go to state 84
    TK_NUMPCARAC         shift, and go to state 85
    TK_ALEATORIO         shift, and go to state 86
    TK_RAND              shift, and go to state 87
    TK_RANDI             shift, and go to state 88
    TK_ABS               shift, and go to state 89
    TK_PI                shift, and go to state 90
    TK_QUAD              shift, and go to state 91
    TK_FUN_INT           shift, and go to state 92
    TK_CRONOMETRO        shift, and go to state 93
    TK_DEBUG             shift, and go to state 94
    TK_ECO               shift, and go to state 95
    TK_PAUSA             shift, and go to state 96
    TK_TIMER             shift, and go to state 97
    TK_ARQUIVO           shift, and go to state 98
    TK_MENSAGEM          shift, and go to state 99
    TK_NUM               shift, and go to state 100
    TK_NUM_INT           shift, and go to state 101
    TK_ID                shift, and go to state 102
